# xstatic-angular-gettext

./: .gitreview  LICENSE  MANIFEST.in  README.txt  setup.cfg  setup.py
xstatic/pkg/angular_gettext/: __init__.py
