[metadata]
name = XStatic-Angular-Gettext
description = Angular-Gettext 2.3.8 (XStatic packaging standard)
description-file = README.rst
maintainer = Rob Cresswell
maintainer-email = robert.cresswell@outlook.com
home-page = https://angular-gettext.rocketeer.be/
keywords = angular_gettext xstatic
license = MIT
zip_safe = False
namespace_packages =
    xstatic
    xstatic.pkg

[files]
packages =
    xstatic

[bdist_wheel]
universal = True
