[metadata]
name = XStatic-Angular-Gettext
description = Angular-Gettext 2.4.1 (XStatic packaging standard)
description-file = README.rst
maintainer = Radomir Dopieralski
maintainer-email = openstack@sheep.art.pl
home-page = https://angular-gettext.rocketeer.be/
keywords = angular_gettext xstatic
license = MIT
zip_safe = False
namespace_packages =
    xstatic
    xstatic.pkg

[files]
packages =
    xstatic

[bdist_wheel]
universal = True
